--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
+#"It sets the port number of the server."
 server.port = 8070
 
+#"It sets the name of the mail server to be used for mail operations. In this case, the mail server is set to hotmail.com."
 mail.host =hotmail.com
+
+# "It sets the email address to be used for mail operations. In this case, the email address is set to eemrezcn@hotmail.com."
 mail.email= eemrezcn@hotmail.com
-mail.password= 123456
+
+#"It sets the password of the email address to be used for mail operations. In this case, the password is set to ******."
+mail.password= ******
