--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -1,5 +1,8 @@
+#"It sets the host of the mail server to be used for Gmail operations, the email address to be used for Gmail operations,
+# and the password to be used for Gmail operations. In this case, the mail server host is set to gmail.com,
+# the email address is set to ali@gmail.com, and the password is set to secret."
 gmail.host= gmail.com
-gmail.email=ramesh@gmail.com
+gmail.email=ali@gmail.com
 gmail.password=secret
 
 
