--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,3 +1,5 @@
+#"In this case, the application name is set to Spring Boot App and the description is set to Spring Boot App Description.
+# These information are usually displayed in the application's user interface or documentation."
 app.name=Spring Boot App
 app.description=Spring Boot App Description
 
